--- a/src/css/_base.scss
+++ b/src/css/_base.scss
@@ -1,1 +1,15 @@
 $center-margin: 0px auto;
+
+// Färger
+$ligthBeige: #d1b586;
+$nearBlack: #362f27;
+$lightBrown: #af7c4d;
+
+@keyframes loading {
+    50% {
+        transform: scale(1.5, 1.5) rotate(180deg);
+    }
+    100% {
+        transform: scale(1, 1) rotate(360deg);
+    }
+}
