--- a/src/css/_layout.scss
+++ b/src/css/_layout.scss
@@ -2,11 +2,18 @@
 
 body {
     width: 100%;
+    font-family: "Josefin Sans", sans-serif;
+    font-weight: 500;
 }
 h1 {
     display: block;
     width: fit-content;
     margin: 50px auto;
+    font-family: "Kalam", cursive;
+    font-size: 3em;
+}
+h2 {
+    font-family: "Kalam", cursive;
 }
 #searchField {
     display: block;
@@ -83,6 +90,10 @@ h1 {
     width: 60%;
     max-width: 200px;
     margin: 0 auto;
+    #loadImg {
+        animation: loading 3s infinite linear;
+
+    }
 }
 #loader.show {
     display: block;
