--- a/src/css/_layout.scss
+++ b/src/css/_layout.scss
@@ -13,6 +13,7 @@ h1 {
     margin: 50px auto;
     font-family: "Kalam", cursive;
     font-size: 3em;
+    text-align: center;
 }
 h2 {
     font-family: "Kalam", cursive;
