--- a/src/css/_layout.scss
+++ b/src/css/_layout.scss
@@ -6,6 +6,9 @@ body {
     font-weight: 500;
     background-color: base.$nearBlack;
     color: base.$ligthBeige;
+    min-height: 100vh;
+    display: grid;
+    grid-template-rows: 1fr auto;
 }
 h1 {
     display: block;
@@ -17,6 +20,9 @@ h1 {
 }
 h2 {
     font-family: "Kalam", cursive;
+}
+a {
+    color: base.$ligthBeige; 
 }
 #searchField {
     display: block;
@@ -107,10 +113,14 @@ button:hover, #dogs article:hover {
     background-color: base.$lightBrown;
     color: base.$nearBlack;
 }
+footer {
+    text-align: center;
+    padding: 20px;
+}
 
 
 
-@media (min-width: 450px) {
+@media (min-width: 600px) {
     #dogs {
         display: grid;
         grid-template-columns: 1fr 1fr;
