Försök att centrera article i #dogs

--- a/src/css/_layout.scss
+++ b/src/css/_layout.scss
@@ -47,6 +47,7 @@ a {
     article {
         width: fit-content;
         margin: 20px auto;
+        align-self: center;
         padding:  20px;
     }
     img {
