--- a/src/css/_layout.scss
+++ b/src/css/_layout.scss
@@ -45,7 +45,7 @@ a {
     display: grid;
     grid-template-columns: 1fr;
     article {
-        width: fit-content;
+        width: 90%;
         margin: 20px auto;
         align-self: center;
         padding:  20px;
@@ -53,7 +53,7 @@ a {
     img {
         display: block;
         margin: base.$center-margin;
-        width: 300px;
+        width: 90%;
         max-width: 300px;
     }
 }
